Correctly align user icon on Special:Contributions
Bug: T90920

--- a/less/specials/pagefeed.less
+++ b/less/specials/pagefeed.less
@@ -80,6 +80,7 @@
 
 .mw-mf-user {
 	color: @grayMediumDark;
+	display: inline-block;  // so that the icon in beta is next to the text when the text is centered
 
 	// FIXME: Remove when mw-ui-icon in stable
 	&.icon {
